bad/bin_op_lth_null_void.example_compiler_output
ERROR
[1mbad/bin_op_lth_null_void.lat:4:7: [1;31merror: [0;1moperator < is defined only for int values and string values, not `null` and `void`[m
	null < foo();
	     [1;32m^[m
